# character-ai-chatbot

./: README.md  docker-compose.yml
.agent/rules/: project-architecture.md  project-rules.md
backend/: .gitignore  config.py  main.py  pyproject.toml  schemas.py  test_api.py
backend/data/: chat_history.db
backend/data/chroma_db/frieren_knowledge/: index.faiss  index.pkl
backend/data/comfyui_workflow/: sdxl_api.json
backend/data/faiss_index/frieren_knowledge/: index.faiss  index.pkl
backend/scripts/: index_knowledge.py
backend/services/: comfyui_client.py  image_prompt_generator.py  knowledge_manager.py  memory_manager.py  session_manager.py  tts_client.py  vllm_client.py
data-pipelines/: .gitignore  README.md  make-chat-dataset.py  pyproject.toml
