[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.2.6",
    "langchain-openai>=1.1.6",
    "langchain>=1.2.0",
    "pydantic-settings>=2.12.0",
    "aiosqlite>=0.20.0",
    "langchain-community>=0.3.0",
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "pypdf>=6.5.0",
    "faiss-cpu>=1.9.0",
    "sentence-transformers>=4.0.0",
    "scalar-fastapi>=1.5.0",
]
